Shipr-Kubernetes/shipr-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipr-frontend-service
spec:
  selector:
    app: shipr-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
