Shipr-Kubernetes/shipr-inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipr-inventory-service
spec:
  selector:
    app: shipr-inventory
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
